manifests/alb.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alb-infra
