manifests/deployment-large.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommender
  namespace: default
  labels:
    app: recommender
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recommender
  template:
    metadata:
      labels:
        app: recommender
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
          resources:
            requests:
              cpu: "500m"
              memory: "6Gi"
            limits:
              cpu: "500m"
              memory: "6Gi"
      volumes:
        - name: conf
          configMap:
            name: nginx-podname
