manifests/deployment-small.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-v1
  namespace: default
  labels:
    app: shop-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shop-v1
  template:
    metadata:
      labels:
        app: shop-v1
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "1500m"
              memory: "256Mi"
            limits:
              cpu: "1500m"
              memory: "512Mi"
